BARC UAT/src/objects/Supplier__c.object
<CustomObject>
    <fields>
        <fullName>Account_Holder_Name__c</fullName>
        <label>Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Bank__c</fullName>
        <label>Address (Bank)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GST_Date__c</fullName>
        <label>GST Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GST_Number__c</fullName>
        <label>GST Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nature_of_Bussiness__c</fullName>
        <label>Nature of Bussiness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_Company__c</fullName>
        <label>Nature of Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Number__c</fullName>
        <label>PAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>